crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__05cache_instance.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2020 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- We keep the old table here to enable us to roll back. It doesn't matter
-- that we have dropped all the data here.
truncate cache_invalidation_stream;

create table cache_invalidation_stream_by_instance (
	stream_id bigint not null,
	instance_name text not null,
	cache_func text not null,
	keys text[],
	invalidation_ts bigint
);

create unique index cache_invalidation_stream_by_instance_id
	on cache_invalidation_stream_by_instance (stream_id);

create sequence cache_invalidation_stream_seq;
