crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__07add_method_to_thumbnail_constraint.postgres.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * This adds the method to the unique key constraint of the thumbnail databases.
 * Otherwise you can't have a scaled and a cropped thumbnail with the same
 * resolution, which happens quite often with dynamic thumbnailing.
 * This is the postgres specific migration modifying the table with a background
 * migration.
 */

-- add new index that includes method to local media
insert into background_updates (ordering, update_name, progress_json)
values (5807, 'local_media_repository_thumbnails_method_idx', '{}');

-- add new index that includes method to remote media
insert into background_updates (
	ordering,
	update_name,
	progress_json,
	depends_on
)
values
	(
		5807,
		'remote_media_repository_thumbnails_method_idx',
		'{}',
		'local_media_repository_thumbnails_method_idx'
	);

-- drop old index
insert into background_updates (
	ordering,
	update_name,
	progress_json,
	depends_on
)
values
	(
		5807,
		'media_repository_drop_index_wo_method',
		'{}',
		'remote_media_repository_thumbnails_method_idx'
	);
