crates/formatter/tests/snapshots/snapshots__synapse__main__delta__58__07add_method_to_thumbnail_constraint.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

/*
 * This adds the method to the unique key constraint of the thumbnail databases.
 * Otherwise you can't have a scaled and a cropped thumbnail with the same
 * resolution, which happens quite often with dynamic thumbnailing.
 * This is a sqlite specific migration, since sqlite can't modify the unique
 * constraint of a table without recreating it.
 */

create table local_media_repository_thumbnails_new (
	media_id text,
	thumbnail_width integer,
	thumbnail_height integer,
	thumbnail_type text,
	thumbnail_method text,
	thumbnail_length integer,
	unique(
		media_id,
		thumbnail_width,
		thumbnail_height,
		thumbnail_type,
		thumbnail_method
	)
);

insert into local_media_repository_thumbnails_new
select
	media_id,
	thumbnail_width,
	thumbnail_height,
	thumbnail_type,
	thumbnail_method,
	thumbnail_length
from local_media_repository_thumbnails;

drop table local_media_repository_thumbnails;

alter table local_media_repository_thumbnails_new
	rename to local_media_repository_thumbnails;

create index local_media_repository_thumbnails_media_id
	on local_media_repository_thumbnails (media_id);


create table if not exists remote_media_cache_thumbnails_new (
	media_origin text,
	media_id text,
	thumbnail_width integer,
	thumbnail_height integer,
	thumbnail_method text,
	thumbnail_type text,
	thumbnail_length integer,
	filesystem_id text,
	unique(
		media_origin,
		media_id,
		thumbnail_width,
		thumbnail_height,
		thumbnail_type,
		thumbnail_method
	)
);

insert into remote_media_cache_thumbnails_new
select
	media_origin,
	media_id,
	thumbnail_width,
	thumbnail_height,
	thumbnail_method,
	thumbnail_type,
	thumbnail_length,
	filesystem_id
from remote_media_cache_thumbnails;

drop table remote_media_cache_thumbnails;

alter table remote_media_cache_thumbnails_new
	rename to remote_media_cache_thumbnails;
